--- a/bezier-easing.html
+++ b/bezier-easing.html
@@ -46,6 +46,11 @@ Wrapper around [bezier-easing](https://github.com/gre/bezier-easing)
         Polymer( 'bezier-easing', {
 
             /**
+             * The raw BezierEasing function
+             */
+            BezierEasing: null,
+
+            /**
              * The curve function used to calculate easing
              *
              * @private
@@ -59,38 +64,68 @@ Wrapper around [bezier-easing](https://github.com/gre/bezier-easing)
                  * @attribute
                  * @type Float
                  */
-                x1: 0,
+                x1: {
+                    value: 0,
+                    reflect: true
+                },
 
 
                 /**
                  * @attribute
                  * @type Float
                  */
-                x2: 0,
+                x2: {
+                    value: 0,
+                    reflect: true
+                },
 
 
                 /**
                  * @attribute
                  * @type Float
                  */
-                y1: 1,
+                y1: {
+                    value: 1,
+                    reflect: true
+                },
 
 
                 /**
                  * @attribute
                  * @type Float
                  */
-                y2: 1
+                y2: {
+                    value: 1,
+                    reflect: true
+                }
             },
-
 
             /**
              * Fired when polymer has set everything up and the element is ready.
              * Grabs the BezierEasing function and sets up the curve
              */
             ready: function() {
-                var BezierEasing = module.require()[ 0 ];
-                this._curve = BezierEasing( this.x1, this.x2, this.y1, this.y2 );
+                this.BezierEasing = module.require()[ 0 ];
+                this.updateCurve();
+            },
+
+
+            /**
+             * Observers to update th cached curve whenever a point changes
+             */
+            observe: {
+                x1: 'updateCurve',
+                x2: 'updateCurve',
+                y1: 'updateCurve',
+                y2: 'updateCurve'
+            },
+
+
+            /**
+             * Fired when a bezier point attribute changes and updates the cached curve
+             */
+            updateCurve: function() {
+                this._curve = this.BezierEasing( this.x1, this.x2, this.y1, this.y2 );
             },
 
 
