--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script src="../platform/platform.js"></script>
 
-    <link rel="import" href="bezier-easing.html">
+    <link rel="import" href="./components/bezier-easing/bezier-easing.html">
 
 </head>
 <body unresolved>
